cleanup soundimage constants names

--- a/run/config.json
+++ b/run/config.json
@@ -6,14 +6,14 @@
 
     "audio.version" : 1,
     "audio.adlibChannelConfigPosition" : 1452,
-    "audio.DATA_START"         : 2215,
-    "audio.sub_306_Param"      : 2343,
-    "audio.sub_306_POS1"       : 2727,
-    "audio.sub_306_POS2"       : 2823,
-    "audio.INIT_MUSIK_START"   : 2924,
-    "audio.DATA_CMD"           : 2926,
+    "audio.dataOffset"          : 2215,
+    "audio.frequenciesOffset"   : 2343,
+    "audio.octavesOffset"       : 2727,
+    "audio.frequenciesCountOffset"       : 2823,
+    "audio.musicInitOffset"   : 2926,
+    "audio.instructionsOffset"           : 2926,
     "audio.soundIndexTablePosition"  : 21989,
-    "audio.DATA_START_SOUND"   : 21731,
+    "audio.soundDataOffset"   : 21731,
     "audio.trackCount"         : 20,
 
     "level.filePrefix"         : "LEVEL",
@@ -33,16 +33,14 @@
 
     "audio.version" : 2,
     "audio.adlibChannelConfigPosition" : 1334,
-    "audio.DATA_START"         : 1973,
-    "audio.sub_306_Param"      : 2101,
-    "audio.sub_306_POS1"       : 2485,
-    "audio.sub_306_POS2"       : 2581,
-    "audio.INIT_MUSIK_START"   : 2682,
-    "audio.DATA_CMD"           : 2684,
-    
+    "audio.dataOffset"          : 1973,
+    "audio.frequenciesOffset"   : 2101,
+    "audio.octavesOffset"       : 2485,
+    "audio.frequenciesCountOffset"       : 2581,
+    "audio.musicInitOffset"   : 2684,
+    "audio.instructionsOffset"           : 2684,
     "audio.soundIndexTablePosition"  : 10918,
-    "audio.DATA_START_SOUND"   : 10660,
-    
+    "audio.soundDataOffset"   : 10660,
     "audio.trackCount"        : 6,
 
     "level.filePrefix"         : "DLVEL",
@@ -63,14 +61,14 @@
 
     "audio_version" : 2,
     "audio.adlibChannelConfigPosition" : 1332,
-    "audio.DATA_START"         : 1516,
-    "audio.sub_306_Param"      : 1644,
-    "audio.sub_306_POS1"       : 2028,
-    "audio.sub_306_POS2"       : 2124,
-    "audio.INIT_MUSIK_START"   : 2224,
-    "audio.DATA_CMD"           : 2226,
+    "audio.dataOffset"          : 1516,
+    "audio.frequenciesOffset"   : 1644,
+    "audio.octavesOffset"       : 2028,
+    "audio.frequenciesCountOffset"       : 2124,
+    "audio.musicInitOffset"   : 2226,
+    "audio.instructionsOffset"           : 2226,
     "audio.soundIndexTablePosition"  : 5358,
-    "audio.DATA_START_SOUND"   : 5100,
+    "audio.soundDataOffset"   : 5100,
     "audio.trackCount"        : 3,
 
     "level.filePrefix"         : "LEVEL",
@@ -88,14 +86,14 @@
 
     "audio_version" : 2,
     "audio.adlibChannelConfigPosition" : 1332,
-    "audio.DATA_START"         : 1516,
-    "audio.sub_306_Param"      : 1644,
-    "audio.sub_306_POS1"       : 2028,
-    "audio.sub_306_POS2"       : 2124,
-    "audio.INIT_MUSIK_START"   : 2224,
-    "audio.DATA_CMD"           : 2226,
+    "audio.dataOffset"          : 1516,
+    "audio.frequenciesOffset"   : 1644,
+    "audio.octavesOffset"       : 2028,
+    "audio.frequenciesCountOffset"       : 2124,
+    "audio.musicInitOffset"   : 2226,
+    "audio.instructionsOffset"           : 2226,
     "audio.soundIndexTablePosition"  : 5358,
-    "audio.DATA_START_SOUND"   : 5100,
+    "audio.soundDataOffset"   : 5100,
     "audio.trackCount"        : 3,
 
     "level.filePrefix"         : "LEVEL",
@@ -113,16 +111,14 @@
 
     "audio.version" : 2,
     "audio.adlibChannelConfigPosition" : 1334,
-    "audio.DATA_START"         : 1973,
-    "audio.sub_306_Param"      : 2101,
-    "audio.sub_306_POS1"       : 2485,
-    "audio.sub_306_POS2"       : 2581,
-    "audio.INIT_MUSIK_START"   : 2682,
-    "audio.DATA_CMD"           : 2684,
-    
+    "audio.dataOffset"          : 1973,
+    "audio.frequenciesOffset"   : 2101,
+    "audio.octavesOffset"       : 2485,
+    "audio.frequenciesCountOffset"       : 2581,
+    "audio.musicInitOffset"   : 2684,
+    "audio.instructionsOffset"           : 2684,
     "audio.soundIndexTablePosition"  : 10918,
-    "audio.DATA_START_SOUND"   : 10660,
-    
+    "audio.soundDataOffset"   : 10660,
     "audio.trackCount"        : 6,
 
     "level.filePrefix"         : "LEVEL",
@@ -140,16 +136,14 @@
 
     "audio.version" : 2,
     "audio.adlibChannelConfigPosition" : 1334,
-    "audio.DATA_START"         : 1973,
-    "audio.sub_306_Param"      : 2101,
-    "audio.sub_306_POS1"       : 2485,
-    "audio.sub_306_POS2"       : 2581,
-    "audio.INIT_MUSIK_START"   : 2682,
-    "audio.DATA_CMD"           : 2684,
-    
+    "audio.dataOffset"          : 1973,
+    "audio.frequenciesOffset"   : 2101,
+    "audio.octavesOffset"       : 2485,
+    "audio.frequenciesCountOffset"       : 2581,
+    "audio.musicInitOffset"   : 2684,
+    "audio.instructionsOffset"           : 2684,
     "audio.soundIndexTablePosition"  : 10918,
-    "audio.DATA_START_SOUND"   : 10660,
-    
+    "audio.soundDataOffset"   : 10660,
     "audio.trackCount"        : 6,
 
     "level.filePrefix"         : "LEVEL",
