- fix Holiday93 audio config - cleanup audio constants

--- a/run/config.json
+++ b/run/config.json
@@ -9,12 +9,11 @@
     "audio.dataOffset"          : 2215,
     "audio.frequenciesOffset"   : 2343,
     "audio.octavesOffset"       : 2727,
-    "audio.frequenciesCountOffset"       : 2823,
-    "audio.musicInitOffset"   : 2926,
-    "audio.instructionsOffset"           : 2926,
-    "audio.soundIndexTablePosition"  : 21989,
-    "audio.soundDataOffset"   : 21731,
-    "audio.trackCount"         : 20,
+    "audio.frequenciesCountOffset"     : 2823,
+    "audio.instructionsOffset"  : 2926,
+    "audio.soundIndexTablePosition"    : 21989,
+    "audio.soundDataOffset"     : 21731,
+    "audio.numberOfTracks"      : 20,
 
     "level.filePrefix"         : "LEVEL",
     "level.groups"             : ["Fun", "Tricky", "Taxing", "Mayhem"],
@@ -36,12 +35,11 @@
     "audio.dataOffset"          : 1973,
     "audio.frequenciesOffset"   : 2101,
     "audio.octavesOffset"       : 2485,
-    "audio.frequenciesCountOffset"       : 2581,
-    "audio.musicInitOffset"   : 2684,
-    "audio.instructionsOffset"           : 2684,
-    "audio.soundIndexTablePosition"  : 10918,
-    "audio.soundDataOffset"   : 10660,
-    "audio.trackCount"        : 6,
+    "audio.frequenciesCountOffset"     : 2581,
+    "audio.instructionsOffset"  : 2684,
+    "audio.soundIndexTablePosition"    : 10918,
+    "audio.soundDataOffset"     : 10660,
+    "audio.numberOfTracks"      : 6,
 
     "level.filePrefix"         : "DLVEL",
     "level.groups"             : ["Tame", "Crazy", "Wild", "Wicked", "Havoc"],
@@ -59,17 +57,16 @@
     "path" : "lemmings_X-Mas91",
     "gametype" : "XMAS91",
 
-    "audio_version" : 2,
+    "audio.version" : 2,
     "audio.adlibChannelConfigPosition" : 1332,
     "audio.dataOffset"          : 1516,
     "audio.frequenciesOffset"   : 1644,
     "audio.octavesOffset"       : 2028,
-    "audio.frequenciesCountOffset"       : 2124,
-    "audio.musicInitOffset"   : 2226,
-    "audio.instructionsOffset"           : 2226,
-    "audio.soundIndexTablePosition"  : 5358,
-    "audio.soundDataOffset"   : 5100,
-    "audio.trackCount"        : 3,
+    "audio.frequenciesCountOffset"     : 2124,
+    "audio.instructionsOffset"  : 2226,
+    "audio.soundIndexTablePosition"    : 5358,
+    "audio.soundDataOffset"     : 5100,
+    "audio.numberOfTracks"      : 3,
 
     "level.filePrefix"         : "LEVEL",
     "level.groups"             : ["xmas"],
@@ -84,17 +81,16 @@
     "path" : "lemmings_X-Mas92",
     "gametype" : "XMAS92",
 
-    "audio_version" : 2,
+    "audio.version" : 2,
     "audio.adlibChannelConfigPosition" : 1332,
     "audio.dataOffset"          : 1516,
     "audio.frequenciesOffset"   : 1644,
     "audio.octavesOffset"       : 2028,
-    "audio.frequenciesCountOffset"       : 2124,
-    "audio.musicInitOffset"   : 2226,
-    "audio.instructionsOffset"           : 2226,
-    "audio.soundIndexTablePosition"  : 5358,
-    "audio.soundDataOffset"   : 5100,
-    "audio.trackCount"        : 3,
+    "audio.frequenciesCountOffset"    : 2124,
+    "audio.instructionsOffset"  : 2226,
+    "audio.soundIndexTablePosition"   : 5358,
+    "audio.soundDataOffset"     : 5100,
+    "audio.numberOfTracks"      : 3,
 
     "level.filePrefix"         : "LEVEL",
     "level.groups"             : ["xmas"],
@@ -110,16 +106,15 @@
     "gametype" : "HOLIDAY93",
 
     "audio.version" : 2,
-    "audio.adlibChannelConfigPosition" : 1334,
-    "audio.dataOffset"          : 1973,
-    "audio.frequenciesOffset"   : 2101,
-    "audio.octavesOffset"       : 2485,
-    "audio.frequenciesCountOffset"       : 2581,
-    "audio.musicInitOffset"   : 2684,
-    "audio.instructionsOffset"           : 2684,
-    "audio.soundIndexTablePosition"  : 10918,
-    "audio.soundDataOffset"   : 10660,
-    "audio.trackCount"        : 6,
+    "audio.adlibChannelConfigPosition" : 1332,
+    "audio.dataOffset"          : 1516,
+    "audio.frequenciesOffset"   : 1644,
+    "audio.octavesOffset"       : 2028,
+    "audio.frequenciesCountOffset"    : 2124,
+    "audio.instructionsOffset"  : 2226,
+    "audio.soundIndexTablePosition"   : 5358,
+    "audio.soundDataOffset"     : 5100,
+    "audio.numberOfTracks"      : 3,
 
     "level.filePrefix"         : "LEVEL",
     "level.groups"             : ["Flurry", "Blizzard"],
@@ -139,12 +134,11 @@
     "audio.dataOffset"          : 1973,
     "audio.frequenciesOffset"   : 2101,
     "audio.octavesOffset"       : 2485,
-    "audio.frequenciesCountOffset"       : 2581,
-    "audio.musicInitOffset"   : 2684,
-    "audio.instructionsOffset"           : 2684,
+    "audio.frequenciesCountOffset"  : 2581,
+    "audio.instructionsOffset"  : 2684,
     "audio.soundIndexTablePosition"  : 10918,
-    "audio.soundDataOffset"   : 10660,
-    "audio.trackCount"        : 6,
+    "audio.soundDataOffset"     : 10660,
+    "audio.numberOfTracks"      : 6,
 
     "level.filePrefix"         : "LEVEL",
     "level.groups"             : ["Frost", "Hail", "Flurry", "Blizzard"],
