--- a/.gitignore
+++ b/.gitignore
@@ -15,9 +15,13 @@ pnpm-debug.log*
 
 # Editor directories and files
 .idea
-.vscode
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+/public/data/**/*.dat
+/public/data/**/*.exe
+/public/data/**/*.bat
+/public/data/**/*.com
